# Launcher

./: .gitignore  CMakeLists.txt  Config.json  Game0.json  Game1.json  Game2.json  Game3.json  Game4.json  main.cpp
include/: Config.h  Game.h  SFMLClass.h  SFMLContent.h  Task
src/: CMakeLists.txt  Config.cpp  Game.cpp  SFMLClass.cpp  SFMLContent.cpp  main.cpp
